<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Header Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#6EACDA"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/maintext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/crowd_detection_service"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_description"
            android:padding="10dp"
            app:srcCompat="@drawable/crowd" />

    </LinearLayout>

    <!-- Get Started Section -->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/how_to_get_started"
        android:textColor="#000000"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Action Buttons Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="30dp">

        <!-- Record Video Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:contentDescription="@string/record_video_description"
                android:focusable="true"
                android:onClick="recordVideo"
                app:srcCompat="@drawable/video" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/record_video"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Capture Image Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:contentDescription="@string/capture_image_description"
                android:focusable="true"
                android:onClick="takePicture"
                app:srcCompat="@drawable/capture" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/capture_image"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <!-- Inventory and Server Buttons Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="30dp">

        <!-- Inventory Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:baselineAligned="false"
                android:clickable="true"
                android:contentDescription="@string/inventory_description"
                android:focusable="true"
                android:onClick="openInventory"
                app:srcCompat="@drawable/inventory" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/inventory"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Server Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:contentDescription="@string/server_description"
                android:focusable="true"
                android:onClick="openServer"
                app:srcCompat="@drawable/server" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/server"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

